--- a/Landing_page/style.css
+++ b/Landing_page/style.css
@@ -208,3 +208,47 @@
   color: white;
   font-weight: 400;
 }
+
+.testimonials {
+  width: 100%;
+  height: 60vh;
+  background-color: transparent;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 50px;
+}
+
+.heading {
+  width: 100%;
+  height: 40%;
+  /* background-color: red; */
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.heading h1 {
+  font-size: 36px;
+}
+.photos {
+  width: 100%;
+  height: 60%;
+  /* background-color: red; */
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+  padding: 10px 300px;
+}
+
+.clients {
+  width: 190px;
+  height: 100%;
+  background-color: rgba(233, 224, 224, 0.286);
+  border-radius: 7px;
+  border: 1px solid rgba(0, 0, 0, 0.447);
+}
